--- a/.github/ISSUE_TEMPLATE/-----.md
+++ b/.github/ISSUE_TEMPLATE/-----.md
@@ -4,15 +4,16 @@ about: 새로운 기능을 추가하기 위한 이슈 작성
 title: ''
 labels: 기능
 assignees: ''
-
 ---
 
 ## 목표
 
-<!-- 필요시 사진 첨부 -->
+- 내용을 적어주세요. (필요시 이미지 첨부)
 
 ## 체크리스트
 
--   [ ] example
+- [ ] example
 
 ## 참고
+
+- 내용을 적어주세요.
